# MLOps_AGH_Lab01

./: .pre-commit-config.yaml  .sops.yaml  README.md  app.py  inference.py  iris_model.joblib  main.py  public_key.asc  pyproject.toml  secrets.yaml  settings.py  training.py
config/: .env.dev  .env.prod  .env.test
tests/: basic_test.py
